--- a/styles/product.css
+++ b/styles/product.css
@@ -137,6 +137,10 @@
 .cart-btn:hover {
   background: #ff5151;
 }
+.cart-btn a {
+  color: white;
+  text-decoration: none;
+}
 
 /* SALES */
 .sales-block {
